[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://animations/effects/bullet_hit.anim" type="Animation" id=2]
[ext_resource path="res://sprites/effects.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8.13008, 8.11727 )

[node name="Bullet" type="Area2D" groups=[
"attacks",
"bullets",
"ranged",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
speed = 400
maxWraps = 1
spawn_sound = "bullet_spawn"
hit_sound = "bullet_hit"
rebound_sound = "bullet_rebound"

[node name="Animator" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/bullet_hit = ExtResource( 2 )
blend_times = [  ]

[node name="Sprite" type="Sprite" parent="." index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 9
hframes = 6
frame = 44
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="__on_bullet_area_entered"]

[connection signal="body_entered" from="." to="." method="__on_bullet_body_entered"]

[connection signal="animation_finished" from="Animator" to="." method="_on_Animator_animation_finished"]


